[gd_scene load_steps=22 format=2]

[ext_resource path="res://widgets/tween_ex.gd" type="Script" id=1]
[ext_resource path="res://widgets/info_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://music/mars.mp3" type="AudioStream" id=3]
[ext_resource path="res://trainer/blue/pug2.png" type="Texture" id=4]
[ext_resource path="res://world/world.gd" type="Script" id=5]
[ext_resource path="res://pokemon/horns/level_up.wav" type="AudioStream" id=6]
[ext_resource path="res://trainer/blue/blue.tres" type="Resource" id=7]
[ext_resource path="res://trainer/rude_man/rude_man.tres" type="Resource" id=8]
[ext_resource path="res://trainer/red/red.tres" type="Resource" id=9]
[ext_resource path="res://trainer/blue/pug.png" type="Texture" id=10]
[ext_resource path="res://trainer/church.png" type="Texture" id=11]
[ext_resource path="res://world/player.gd" type="Script" id=12]
[ext_resource path="res://trainer/dead_man/dead_man.tres" type="Resource" id=13]
[ext_resource path="res://world/npc.tscn" type="PackedScene" id=14]
[ext_resource path="res://world/interactable.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=21]

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 52.5, 26.5 )

[sub_resource type="RayShape2D" id=47]
length = 53.0

[sub_resource type="CircleShape2D" id=49]
radius = 16.0

[sub_resource type="CircleShape2D" id=48]
radius = 16.0

[node name="level" type="Node2D"]
script = ExtResource( 5 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="success" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.5
bus = "fx"

[node name="blinders" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="ColorRect" type="ColorRect" parent="blinders"]
margin_left = -93.0
margin_bottom = 144.0
color = Color( 0.113725, 0.368627, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="blinders"]
margin_left = 160.0
margin_right = 253.0
margin_bottom = 144.0
color = Color( 0.113725, 0.368627, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="blinders"]
margin_left = -93.0
margin_top = -144.0
margin_right = 253.0
color = Color( 0.113725, 0.368627, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="blinders"]
margin_left = -93.0
margin_top = 144.0
margin_right = 253.0
margin_bottom = 288.0
color = Color( 0.113725, 0.368627, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="tween" type="Tween" parent="."]
script = ExtResource( 1 )

[node name="Church" type="Sprite" parent="."]
position = Vector2( 80, 72 )
scale = Vector2( 0.129863, 0.129968 )
texture = ExtResource( 11 )

[node name="player" type="Area2D" parent="."]
position = Vector2( 149, 80 )
script = ExtResource( 12 )
trainer = ExtResource( 7 )

[node name="Pug" type="AnimatedSprite" parent="player"]
frames = SubResource( 45 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 21 )

[node name="ray" type="RayCast2D" parent="player"]
cast_to = Vector2( 16, 0 )

[node name="tween" type="Tween" parent="player"]
repeat = true
playback/repeat = true

[node name="chairs" type="StaticBody2D" parent="."]
position = Vector2( 105, 56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="chairs"]
position = Vector2( 2.5, -13.5 )
shape = SubResource( 46 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="chairs"]
position = Vector2( 108, 31 )
shape = SubResource( 46 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="chairs"]
position = Vector2( -135, -3 )
rotation = 1.5708
shape = SubResource( 46 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="chairs"]
position = Vector2( -134, 102 )
rotation = 1.5708
shape = SubResource( 46 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="chairs"]
position = Vector2( -134, 102 )
rotation = 1.5708
shape = SubResource( 46 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="chairs"]
position = Vector2( -52, 114 )
shape = SubResource( 46 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="chairs"]
position = Vector2( -94, -67 )
shape = SubResource( 46 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="chairs"]
position = Vector2( 2.5, 61.5 )
shape = SubResource( 46 )

[node name="cry_baby" parent="." instance=ExtResource( 14 )]
position = Vector2( 62, 80 )
trainer = ExtResource( 9 )

[node name="los" type="CollisionShape2D" parent="cry_baby"]
rotation = -1.5708
shape = SubResource( 47 )

[node name="rude_man" parent="." instance=ExtResource( 14 )]
position = Vector2( 40, 35 )
trainer = ExtResource( 8 )

[node name="los" type="CollisionShape2D" parent="rude_man"]
shape = SubResource( 47 )

[node name="dead_man_chew" parent="." instance=ExtResource( 15 )]
position = Vector2( 15, 75 )
text = "You want to fight the dead man. But he is dead.
You settle with chewing his femur.
You notice an organ in the corner of the church.q"

[node name="trigger" type="CollisionShape2D" parent="dead_man_chew"]
position = Vector2( 0, 7 )
shape = SubResource( 49 )

[node name="exit" parent="." instance=ExtResource( 15 )]
position = Vector2( 170, 73 )
text = "You want to fight the dead man. But he is dead.
You settle with chewing his femur.
You notice an organ in the corner of the church.q"

[node name="trigger" type="CollisionShape2D" parent="exit"]
position = Vector2( 0, 7 )
shape = SubResource( 49 )

[node name="dead_man" parent="." instance=ExtResource( 14 )]
position = Vector2( 11, 82 )
trainer = ExtResource( 13 )
passive = true

[node name="trigger" type="CollisionShape2D" parent="dead_man"]
position = Vector2( 2, 54 )
shape = SubResource( 48 )

[node name="info_box" parent="." instance=ExtResource( 2 )]
visible = false

[node name="transition" parent="." instance_placeholder="res://widgets/transition.tscn"]

[connection signal="trigger" from="dead_man_chew" to="." method="_on_dead_man_chew_trigger"]
[connection signal="trigger" from="exit" to="." method="_on_exit_trigger"]
[connection signal="beat" from="dead_man" to="." method="_on_dead_man_beat"]
